apps/monitoring/uptime-kuma/network.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: monitoring
spec:
  selector:
    app: uptime-kuma
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3001
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: uptime-kuma
#   namespace: monitoring
#   annotations:
#     nginx.ingress.kubernetes.io/auth-url: |-
#       http://ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
#     nginx.ingress.kubernetes.io/auth-signin: |-
#       https://uptime.pawked.com/outpost.goauthentik.io/start?rd=$escaped_request_uri
#     nginx.ingress.kubernetes.io/auth-response-headers: |-
#       Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
#     nginx.ingress.kubernetes.io/auth-snippet: |
#       proxy_set_header X-Forwarded-Host $http_host;
# spec:
#   ingressClassName: internal
#   tls:
#   - hosts:
#     - uptime.pawked.com
#   rules:
#   - host: uptime.pawked.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: uptime-kuma
#             port:
#               number: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  namespace: monitoring
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - "uptime.pawked.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: uptime-kuma
          port: 80
          kind: Service
          group: ''
          weight: 1
